# NeuralNet

./: CMakeLists.txt
NeuralNetwork/: CMakeLists.txt  NeuralNetwork.cpp
NeuralNetwork/include/NeuralNetwork/: NeuralNetwork.hpp
src/: main.cpp
